// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmInfoRowUrl renders a URL, protocol, and warning icon when the protocol is "http" 1`] = `
<div>
  <div
    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--align-items-center mm-box--color-warning-default mm-box--background-color-warning-muted mm-box--rounded-sm"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-warning-default"
        style="mask-image: url('./images/icons/danger.svg');"
      />
      HTTP
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
    >
      http://www.example.com/
    </p>
  </div>
</div>
`;

exports[`ConfirmInfoRowUrl should match snapshot 1`] = `
<div>
  <div
    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
  >
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
    >
      https://example.com
    </p>
  </div>
</div>
`;
